[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/power/arrow/Arrow.gd" type="Script" id=1]
[ext_resource path="res://scenes/power/arrow/assets/arrow_1.png" type="Texture" id=2]
[ext_resource path="res://scenes/power/arrow/assets/arrow_impact_1.png" type="Texture" id=3]
[ext_resource path="res://scenes/power/arrow/assets/arrow_impact_2.png" type="Texture" id=4]
[ext_resource path="res://scenes/power/arrow/assets/arrow_impact_3.png" type="Texture" id=5]
[ext_resource path="res://scenes/power/arrow/assets/arrow_impact_4.png" type="Texture" id=6]
[ext_resource path="res://scenes/power/arrow/assets/arrow_impact_5.png" type="Texture" id=7]
[ext_resource path="res://scenes/power/arrow/assets/arrow_impact_6.png" type="Texture" id=8]
[ext_resource path="res://scenes/power/arrow/assets/arrow_2.png" type="Texture" id=9]
[ext_resource path="res://scenes/power/arrow/assets/arrow_3.png" type="Texture" id=10]
[ext_resource path="res://main/assets/audio/sfx/impact.ogg" type="AudioStream" id=11]
[ext_resource path="res://main/assets/audio/sfx/throw_arrow.ogg" type="AudioStream" id=12]


[sub_resource type="Animation" id=1]
resource_name = "arrow_impacting"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 9 ), ExtResource( 10 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 20.6726

[sub_resource type="CapsuleShape2D" id=4]

[sub_resource type="CircleShape2D" id=5]

[node name="Arrow" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "arrow_traveling"
anims/arrow_impacting = SubResource( 1 )
anims/arrow_traveling = SubResource( 2 )

[node name="ImpactArea" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 38.34, 0 )
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ImpactArea"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="GroundDetector" type="Area2D" parent="."]
position = Vector2( 48, 0 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetector"]
shape = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.13237, 0 )
scale = Vector2( 5.70743, 1 )

[node name="ImpactAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="ThrowArrowAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
pitch_scale = 2.0
[connection signal="body_entered" from="ImpactArea" to="." method="_on_ImpactArea_body_entered"]
[connection signal="body_entered" from="GroundDetector" to="." method="_on_GroundDetector_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
